# Lab2_3semestr

./: CMakeLists.txt  functions.cpp  functions.h  main.cpp
.github/workflows/: release.yml
gtest_tests/: CMakeLists.txt  tests.cpp
